--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 pandas==2.2.2
 pip==24.1.2
 streamlit==1.38.0
+folium==0.17.0
+streamlit-folium==0.23.1
 matplotlib==3.7.1
 seaborn==0.13.2
 setuptools==71.0.4
